--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    background-color:transparent;
+    background-color:#333;
     color:white;
     display:flex;
     justify-content:space-between;
